# ChangeLog for www-servers/apache
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.138 2010/04/06 15:30:23 abcd Exp $

  04 Apr 2010; Guy Martin <gmsoft@gentoo.org> apache-2.2.15.ebuild:
  hppa stable, #308049

  31 Mar 2010; Raúl Porcel <armin76@gentoo.org> apache-2.2.15.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #308049

  31 Mar 2010; Brent Baude <ranger@gentoo.org> apache-2.2.15.ebuild:
  Marking apache-2.2.15 ppc64 for bug 308049

  31 Mar 2010; Brent Baude <ranger@gentoo.org> apache-2.2.15.ebuild:
  Marking apache-2.2.15 ppc for bug 308049

  29 Mar 2010; Markus Meier <maekke@gentoo.org> apache-2.2.15.ebuild:
  amd64/arm stable, bug #308049

  29 Mar 2010; Christian Faulhammer <fauli@gentoo.org> apache-2.2.15.ebuild:
  stable x86, security bug 308049

  07 Mar 2010; Benedikt Böhm <hollow@gentoo.org> apache-2.2.15.ebuild:
  fix openssl DEPEND wrt #308049

*apache-2.2.15 (07 Mar 2010)

  07 Mar 2010; Benedikt Böhm <hollow@gentoo.org> +apache-2.2.15.ebuild:
  version bump. fixes #293783, #294098, #295916 and #308049

  11 Jan 2010; Benedikt Böhm <hollow@gentoo.org> -apache-2.2.11-r2.ebuild,
  metadata.xml:
  cleanup

  01 Jan 2010; Tobias Klausmann <klausman@gentoo.org>
  apache-2.2.14-r1.ebuild:
  Stable on alpha, bug #291810

  18 Dec 2009; Raúl Porcel <armin76@gentoo.org> apache-2.2.14-r1.ebuild:
  ia64/s390/sh/sprc stable wrt #291810

  18 Nov 2009; Brent Baude <ranger@gentoo.org> apache-2.2.14-r1.ebuild:
  Marking apache-2.2.14-r1 ppc64 for bug 291810

  11 Nov 2009; Jeroen Roovers <jer@gentoo.org> apache-2.2.14-r1.ebuild:
  Stable for HPPA (bug #291810).

  08 Nov 2009; nixnut <nixnut@gentoo.org> apache-2.2.14-r1.ebuild:
  ppc stable #291810

  04 Nov 2009; Markus Meier <maekke@gentoo.org> apache-2.2.14-r1.ebuild:
  amd64/arm/x86 stable, bug #291810

  04 Nov 2009; Benedikt Böhm <hollow@gentoo.org> -apache-2.2.13.ebuild,